--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 
 
         <main class="container">
+            <div id="overlay">
+                <div id="alert-message">
+                    <div id="notice">注意</div>
+                    <div id="warning-text">此網頁只有在借用與歸還平板檢查使用，請勿任意填寫。</div>
+                    <div id="continue-text">點擊任意位置以繼續。</div>
+                </div>
+            </div>
             <section class = "focus-box">
                 <h2>每次借用平板時，請先確認外觀並登記</h2>
                 <p>⚠️確實填寫，以免受罰</p>
