--- a/index.html
+++ b/index.html
@@ -189,9 +189,12 @@
                 借用平板登記資料查詢
             </a>
         </footer>
+
+        <script>
         document.getElementById('overlay').addEventListener('click', function () {
             this.style.display = 'none';
         });
+        </script>
         <script src="js/main.js" defer></script> 
           
     </body>
