--- a/BorrowLog.html
+++ b/BorrowLog.html
@@ -60,6 +60,9 @@
             </div>    
         </main>
 
+
+        <div id="缺漏警示" style="margin-bottom: 10px; color: red; font-weight: bold;"></div>
+
         <main class="data">
             <table border="1">
                 <thead>
@@ -67,6 +70,7 @@
                         <th>座號</th>
                         <th>平板代號</th>
                         <th>借用狀況</th>
+                        <th>異常資料</th>
                     </tr>
                 </thead>
                 <tbody id="結果表格">
