--- a/BorrowLog.html
+++ b/BorrowLog.html
@@ -46,14 +46,14 @@
                     <label for="時段">時段：</label>
                     <select id="時段" >
                         <option value="08:10-08:35">晨光時間(08:10~08:35)</option>
-                        <option value="08:36-09:20">第一節(08:40~09:20)</option>
-                        <option value="09:21-10:10">第二節(09:30~10:10)</option>
-                        <option value="10:11-11:10">第三節(10:30~11:10)</option>
-                        <option value="11:11-12:00">第四節(11:20~12:00)</option>
-                        <option value="12:00-13:20">午休時間(12:00~13:20)</option>
-                        <option value="13:21-14:10">第五節(13:30~14:10)</option>
-                        <option value="14:11-15:00">第六節(14:20~15:00)</option>
-                        <option value="15:01-15:55">第七節(15:15~15:55)</option>
+                        <option value="08:35-09:20">第一節(08:35-09:20)</option>
+                        <option value="09:20-10:10">第二節(09:20-10:10)</option>
+                        <option value="10:10-11:10">第三節(10:10-11:10)</option>
+                        <option value="11:10-12:00">第四節(11:10-12:00)</option>
+                        <option value="12:00-13:20">午休時間(12:00-13:20)</option>
+                        <option value="13:20-14:10">第五節(13:20-14:10)</option>
+                        <option value="14:10-15:00">第六節(14:10-15:00)</option>
+                        <option value="15:00-15:55">第七節(15:00-15:55)</option>
                     </select>
                 </div> 
                 <button id="查詢按鈕">查詢</button>
