--- a/BorrowLog.html
+++ b/BorrowLog.html
@@ -79,6 +79,10 @@
             </table>
         </main>
 
+        <div id="loading-overlay">
+        資料送出中，請稍候...
+        </div>
+
         <footer style="text-align: center; margin-top: 20px;">
             <a href="index.html" style="display: inline-flex; align-items: center; text-decoration: none; color: #3367d6; font-size: 18px;">
                 <img src="https://fonts.gstatic.com/s/i/materialicons/home/v10/24px.svg" alt="Home Icon" style="width: 24px; height: 24px; margin-right: 8px;">
