--- a/index.html
+++ b/index.html
@@ -161,9 +161,8 @@
                         <label for="平板狀況">平板狀況：</label>
                         <select id="平板狀況">
                             <option value="螢幕正常無損">螢幕正常無損</option>
-                            <option value="螢幕有小裂痕，不影響使用">螢幕有小裂痕，不影響使用</option>
-                            <option value="螢幕有玻璃碎片，感覺會被割傷">螢幕有玻璃碎片，感覺會被割傷</option>
-                            <option value="螢幕凹陷破裂，螢幕有破洞">螢幕凹陷破裂，螢幕有破洞</option>
+                            <option value="螢幕有破裂，但不影響使用">螢幕有破裂，但不影響使用</option>
+                            <option value="螢幕有破裂，有危險沒辦法使用">螢幕有破裂，有危險沒辦法使用</option>
                         </select>
                     </div>
                 </div>
