--- a/BorrowLog.html
+++ b/BorrowLog.html
@@ -15,7 +15,8 @@
             <div class="IdInpt-container">    
                 <div class="IdInpt-group">
                     <label for="年級">年級：</label>
-                    <select id="年級" >
+                    <select id="年級" required>
+                        <option value="" disabled selected>請選擇</option>
                         <option value="1">01</option>
                         <option value="2">02</option>
                         <option value="3">03</option>
@@ -27,7 +28,8 @@
 
                 <div class="IdInpt-group">
                     <label for="班級">班級：</label>
-                    <select id="班級" >
+                    <select id="班級" required>
+                        <option value="" disabled selected>請選擇</option>
                         <option value="1">01</option>
                         <option value="2">02</option>
                         <option value="3">03</option>
@@ -44,7 +46,8 @@
 
                 <div class="IdInpt-group">
                     <label for="時段">時段：</label>
-                    <select id="時段" >
+                    <select id="時段" required>
+                        <option value="" disabled selected>請選擇</option>
                         <option value="08:10-08:35">晨光時間(08:10~08:35)</option>
                         <option value="08:35-09:20">第一節(08:35-09:20)</option>
                         <option value="09:20-10:10">第二節(09:20-10:10)</option>
