--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
                 <div class="IdInpt-container">    
                     <div class="IdInpt-group">
                         <label for="平板代號">平板代號：</label>
-                        <select id="平板代號">
+                        <select id="平板代號" required>
+                            <option value="" disabled selected>請選擇</option>
                             <option value="A">A</option>
                             <option value="B">B</option>
                             <option value="C">C</option>
@@ -40,7 +41,8 @@
 
                     <div class="IdInpt-group">
                         <label for="平板號碼">平板號碼：</label>
-                        <select id="平板號碼">
+                        <select id="平板號碼" required>
+                            <option value="" disabled selected>請選擇</option>
                             <option value="01">01</option>
                             <option value="02">02</option>
                             <option value="03">03</option>
@@ -85,7 +87,8 @@
                 <div class="IdInpt-container">
                     <div class="IdInpt-group">
                         <label for="我的年級">我的年級：</label>
-                        <select id="我的年級" >
+                        <select id="我的年級" required>
+                            <option value="" disabled selected>請選擇</option>
                             <option value="1">01</option>
                             <option value="2">02</option>
                             <option value="3">03</option>
@@ -97,7 +100,8 @@
 
                     <div class="IdInpt-group">
                         <label for="我的班級">我的班級：</label>
-                        <select id="我的班級" >
+                        <select id="我的班級" required>
+                            <option value="" disabled selected>請選擇</option>
                             <option value="1">01</option>
                             <option value="2">02</option>
                             <option value="3">03</option>
@@ -114,7 +118,8 @@
 
                     <div class="IdInpt-group">
                         <label for="我的座號">我的座號：</label>
-                        <select id="我的座號" >
+                        <select id="我的座號" required>
+                            <option value="" disabled selected>請選擇</option>
                             <option value="1">01</option>
                             <option value="2">02</option>
                             <option value="3">03</option>
@@ -159,7 +164,8 @@
                 <div class="IdInpt-container">
                     <div class="IdInpt-group">
                         <label for="平板狀況">平板狀況：</label>
-                        <select id="平板狀況">
+                        <select id="平板狀況" required>
+                            <option value="" disabled selected>請選擇</option>
                             <option value="螢幕正常無損">螢幕正常無損</option>
                             <option value="螢幕有破裂，但不影響使用">螢幕有破裂，但不影響使用</option>
                             <option value="螢幕有破裂，有危險沒辦法使用">螢幕有破裂，有危險沒辦法使用</option>
