--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
                     </div>
                 </div>
 
-                <div id="loading-overlay">
+                <div id="loading-overlay" style="display: flex;">
+                    <div class="spinner"></div>
                 資料送出中，請稍候...
                 </div>
                 
