--- a/BorrowLog.html
+++ b/BorrowLog.html
@@ -82,8 +82,9 @@
             </table>
         </main>
 
-        <div id="loading-overlay">
-        資料送出中，請稍候...
+        <div id="loading-overlay" style="display: flex;">
+          <div class="spinner"></div>
+          資料送出中，請稍候...
         </div>
 
         <footer style="text-align: center; margin-top: 20px;">
