--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     </div>
                 </div>
 
-                <div id="loading-overlay" style="display: flex;">
+                <div id="loading-overlay">
                     <div class="spinner"></div>
                 資料送出中，請稍候...
                 </div>
