--- a/BorrowLog.html
+++ b/BorrowLog.html
@@ -82,7 +82,7 @@
             </table>
         </main>
 
-        <div id="loading-overlay" style="display: flex;">
+        <div id="loading-overlay">
           <div class="spinner"></div>
           資料送出中，請稍候...
         </div>
