--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                             <option value="K">K</option>
                             <option value="L">L</option>
                             <option value="M">M</option>
+                            <option value="N">N</option>
+                            <option value="O">O</option>
                         </select>
                     </div>
 
@@ -89,8 +91,6 @@
                         <label for="我的年級">我的年級：</label>
                         <select id="我的年級" required>
                             <option value="" disabled selected>請選擇</option>
-                            <option value="1">01</option>
-                            <option value="2">02</option>
                             <option value="3">03</option>
                             <option value="4">04</option>
                             <option value="5">05</option>
@@ -160,15 +160,15 @@
                     </div>
                 </div>
 
-                <h3>借用前平板狀況：</h3>
+                <h3>使用前平板狀況：</h3>
                 <div class="IdInpt-container">
                     <div class="IdInpt-group">
                         <label for="平板狀況">平板狀況：</label>
                         <select id="平板狀況" required>
                             <option value="" disabled selected>請選擇</option>
-                            <option value="螢幕正常無損">螢幕正常無損</option>
-                            <option value="螢幕有破裂，但不影響使用">螢幕有破裂，但不影響使用</option>
-                            <option value="螢幕有破裂，有危險沒辦法使用">螢幕有破裂，有危險沒辦法使用</option>
+                            <option value="自己檢查過，螢幕正常沒有問題">自己檢查過，螢幕正常沒有問題</option>
+                            <option value="螢幕有破裂，給資訊長看過，還可以用">螢幕有破裂，給資訊長看過，還可以用</option>
+                            <option value="螢幕有破裂，給資訊長看過，已請資訊長送修">螢幕有破裂，給資訊長看過，已請資訊長送修</option>
                         </select>
                     </div>
                 </div>
