--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>關埔國小平板借用登記系統</title>
         <link rel="stylesheet" href="css/style.css"> <!-- 連結 CSS -->
+        <link rel="stylesheet" href="css/modal.css"> <!-- 連結 CSS -->
     </head>
     <body>
         <header>
@@ -181,6 +182,9 @@
                 <button>確認</button>
                 <hr>    
             </section>
+
+            <!-- 資訊區塊：用於顯示模態框內容 -->
+            <div id="資訊區塊" style="display: none;"></div>
         </main>
 
         <footer style="text-align: center; padding: 1em; display: flex; justify-content: center; gap: 32px; flex-wrap: wrap;">
