--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                         <select id="平板狀況" required>
                             <option value="" disabled selected>請選擇</option>
                             <option value="自己檢查過，螢幕正常沒有問題">自己檢查過，螢幕正常沒有問題</option>
-                            <option value="螢幕有破裂，給資訊長看過，還可以用">螢幕有破裂，給資訊長看過，還可以用</option>
-                            <option value="螢幕有破裂，給資訊長看過，已請資訊長送修">螢幕有破裂，給資訊長看過，已請資訊長送修</option>
+                            <option value="螢幕有破裂，還可以用">螢幕有破裂，還可以用</option>
+                            <option value="螢幕有破裂，已請資訊長送修">螢幕有破裂，已請資訊長送修</option>
                         </select>
                     </div>
                 </div>
